# Employee-Mangement-System

./: Budjet.cpp  Budjet.h  CMakeLists.txt  Department.cpp  Department.h  Employeee.cpp  Employeee.h  Payroll.cpp  Payroll.h  Project.cpp  Project.h  README.md  Staff.cpp  Staff.h  Staffmember.cpp  Staffmember.h  main.cpp
