cmake_minimum_required(VERSION 3.23)
project(EMPLOY_trial)

set(CMAKE_CXX_STANDARD 17)

add_executable(EMPLOY_trial main.cpp Employeee.cpp. Employeee.h Staffmember.cpp Staffmember.h  Staff.cpp Staff.h Department.cpp Department.h   Payroll.cpp. Payroll.h  Budjet.cpp Budjet.h Project.cpp Project.h)


